# VeterinaryAnalysisAutomation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirments.txt  secret.txt  video_list.csv
.github/workflows/: build-and-test.yml
.streamlit/: secrets.toml.example
files/: data.json
patient_intake/: __init__.py  api_client.py  app.py  captcha.py  config.py  email_sender.py  pdf_generator.py
scripts/: Maze Test Analysis Merged and Grouped.csv  automation.py  blind_group.csv  joined_file.csv  listing_videos.py  main.py  maze_merging_final_files.py  maze_test_grouping.py  merged_final.csv  merged_final.xlsx  merged_results.csv  merged_results_expert.csv  merged_results_non_expert.csv  ordering_bot.py  pdf_edit.py  python_maze_test.py  python_maze_test_local.py  secrets.env  visual_group.csv  visually_impaired_group.csv
scripts/.streamlit/: secrets.toml
tests/: __init__.py  conftest.py  test_email_sender.py
video_results/: Visual maze test analysis study example July 2025 Non-Expert.csv  combined_analysis.csv  visually_impaired_group.csv
